tests/baselines/reference/baseExpressionTypeParameters.errors.txt
tests/cases/compiler/baseExpressionTypeParameters.ts(10,27): error TS2562: Base class expressions cannot reference class type parameters.


==== tests/cases/compiler/baseExpressionTypeParameters.ts (1 errors) ====
    // Repro from #17829
    
    function base<T>() {
        class Base {
            static prop: T;
        }
        return Base;
    }
    
    class Gen<T> extends base<T>() {}  // Error, T not in scope
                              ~
!!! error TS2562: Base class expressions cannot reference class type parameters.
    class Spec extends Gen<string> {}
    
    <string>Spec.prop;